[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lamini"
version = "2.5.6a1"
authors = [
  { name="PowerML", email="info@powerml.co" },
]
description = "Build on large language models faster"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "lamini-configuration[yaml]",
    "requests",
    "tqdm",
    "numpy<2.0.0",
    "jsonlines",
    "pandas",
    "azure-storage-blob",
    "scikit-learn",
    "aiohttp",
    "faiss-cpu",
]

[tool.setuptools]
packages = [
    "lamini",
    "lamini.classify",
    "lamini.error",
    "lamini.api",
    "lamini.api.utils",
    "lamini.runners",
    "lamini.generation",
    "lamini.evaluators",
    "lamini.evaluators.custom",
    "lamini.evaluators.custom.datasets",
    "lamini.evaluators.helm",
    "lamini.evaluators.utils",
    "lamini.index",
]

[tool.setuptools.package-data]
"*" = ["*.jsonl"]

[tool.autopep8]
max_line_length = 127
in-place = true
recursive = true
aggressive = 3
