[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lamini"
version = "3.2.22"
authors = [
  { name="Lamini", email="info@lamini.ai" },
]
description = "Build on large language models faster"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "lamini-configuration[yaml]",
    "requests",
    "tqdm",
    "numpy<2.0.0",
    "jsonlines",
    "pandas",
    "azure-storage-blob",
    "scikit-learn",
    "sqlglot",
    "aiohttp",
    "faiss-cpu", 
    "openai",
    "sqlalchemy",
]

[project.optional-dependencies]
index = ["faiss-cpu"]
classifier = ["scikit-learn"]

[tool.setuptools]
packages = [
    "lamini",
    "lamini.classify",
    "lamini.error",
    "lamini.api",
    "lamini.api.utils",
    "lamini.generation",
    "lamini.evaluators",
    "lamini.evaluators.custom",
    "lamini.evaluators.custom.datasets",
    "lamini.evaluators.helm",
    "lamini.evaluators.utils",
    "lamini.index",
    "lamini.one_evaler",
    "lamini.experiment",
    "lamini.experiment.pipeline",
    "lamini.experiment.generators",
    "lamini.experiment.validators",
]

[tool.setuptools.package-data]
"*" = ["*.jsonl"]

[tool.autopep8]
max_line_length = 127
in-place = true
recursive = true
aggressive = 3
